--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         externalNativeBuild {
             cmake {
-                cppFlags '-std=c++17'
+                cppFlags '-std=c++20'
             }
         }
     }
@@ -43,6 +43,7 @@ android {
     buildFeatures {
         viewBinding true
     }
+    ndkVersion "23.0.7599858"
 }
 
 dependencies {
