--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -9,6 +9,8 @@ cmake_minimum_required(VERSION 3.10.2)
 
 project("android_kvm_hello_world")
 
+include_directories( ${CMAKE_SOURCE_DIR} )
+
 # Creates and names a library, sets it as either STATIC
 # or SHARED, and provides the relative paths to its source code.
 # You can define multiple libraries, and CMake builds them for you.
@@ -21,6 +23,7 @@ add_library( # Sets the name of the library.
         SHARED
 
         # Provides a relative path to your source file(s).
+        elf_loader.cpp
         kvm_test.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
@@ -36,6 +39,13 @@ find_library( # Sets the name of the path variable.
         # you want CMake to locate.
         log)
 
+find_library( # Sets the name of the path variable.
+        android-lib
+
+        # Specifies the name of the NDK library that
+        # you want CMake to locate.
+        android)
+
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
@@ -45,4 +55,5 @@ target_link_libraries( # Specifies the target library.
 
         # Links the target library to the log library
         # included in the NDK.
-        ${log-lib})
+        ${log-lib}
+        ${android-lib})
